--- a/scripts/popup/animations.css
+++ b/scripts/popup/animations.css
@@ -1,10 +1,38 @@
+/* -------------------------- Tabs --------------------------- */
+
 .tab {
   transition: left 0.5s;
 }
 
+
+
+/* ------------------------ Settings ------------------------- */
+
+/* Reset Settings Button */
 #reset-settings-button {
   transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
 }
+
+
+
+/* --------------- Text Glowing and Brightness --------------- */
+
+/* Darker */
+#title,
+.tab-icon,
+.tab.active .tab-name,
+.setting-title,
+.setting-dropdown,
+.dropdown:not(:has(.setting-switch))::after,
+.dropdown.switch .setting-switch::before {
+  transition: text-shadow 0.3s ease, filter 0.3s ease;
+}
+
+
+
+/* ------------------------ Utilities ------------------------ */
+
+/* Switch */
 
 .toggle-switch {
   transition: border-color 0.6s ease-out;
@@ -43,15 +71,4 @@ body:has(#extension-activation-switch > .toggle-on) .toggle-on .toggle-switch-te
 
 body:has(#extension-activation-switch > .toggle-on) .toggle-on .glow-comp {
   transition: opacity 1s;
-}
-
-/* Text Glowing & Brightness */
-
-/* Darker */
-#title,
-.tab-icon,
-.tab.active .tab-name,
-.setting-title,
-.setting-dropdown {
-  transition: text-shadow 0.3s ease, filter 0.3s ease;
 }
