--- a/scripts/utilities/themes/night-owl.css
+++ b/scripts/utilities/themes/night-owl.css
@@ -8,12 +8,20 @@
   --placeholder-color: #8E9AB6;
   --error-text-color: #F22C3E;
 
+  --editor-header-text-color: #E5E2DC;
+  --editor-footer-text-color: #506377;
+
   /* Backgrounds */
   --primary-background-color: #061626;
   --secondary-background-color: #05131F;
   --tertiary-background-color: #122438;
   --quaternary-background-color: #475C70;
-  --header-footer-border-color: #192C40;
+
+  --editor-header-background-color: #061626;
+  --editor-header-border-color: #05131F;
+  --editor-header-shadow-color: #05131F;
+  --editor-footer-background-color: #061626;
+  --editor-footer-border-color: #192C40;
 
   /* Editor */
   --cursor-color: #8AA6C3;
@@ -24,7 +32,7 @@
   --selected-searching-text-background-color: #555B8C;
   --searching-text-background-color: #008CFF4D;
   --indent-guides-color: #283B5F;
-  --hint-matching-symbols: #CBE386;
+  --hint-matching-symbols-color: #CBE386;
   --tooltip-border-color: #657D95;
 
   /* Syntax */
@@ -43,21 +51,37 @@
   --matching-brackets-border-color: #888888;
 
   /* Buttons */
-  --general-button-normal-color: #122438;
-  --general-button-hover-color: #314458;
-  --general-button-press-color: #506377;
+  --general-button-text-color: #ffffff;
+  --general-normal-button-background-color: #122438;
+  --general-normal-button-border-color: #314458;
+  --general-normal-button-shadow-color: #506377;
+  --general-hover-button-background-color: #314458;
+  --general-press-button-background-color: #506377;
+  --general-press-button-border-color: #506377;
 
-  --save-arguments-button-normal-color: #05131F;
-  --save-arguments-button-hover-color: #314458;
-  --save-arguments-button-press-color: #506377;
+  --save-arguments-button-text-color: #ffffff;
+  --save-arguments-normal-button-background-color: #05131F;
+  --save-arguments-normal-button-border-color: #314458;
+  --save-arguments-normal-button-shadow-color: #506377;
+  --save-arguments-hover-button-background-color: #314458;
+  --save-arguments-press-button-background-color: #506377;
+  --save-arguments-press-button-border-color: #506377;
 
-  --dangerous-button-normal-color: #E53343;
-  --dangerous-button-hover-color: #CD1222;
-  --dangerous-button-press-color: #9E0E1A;
+  --safe-button-text-color: #ffffff;
+  --safe-normal-button-background-color: #00B200;
+  --safe-normal-button-border-color: #019101;
+  --safe-normal-button-shadow-color: #006E00;
+  --safe-hover-button-background-color: #019101;
+  --safe-press-button-background-color: #006E00;
+  --safe-press-button-border-color: #006E00;
 
-  --safe-button-normal-color: #00B200;
-  --safe-button-hover-color: #019101;
-  --safe-button-press-color: #006E00;
+  --dangerous-button-text-color: #ffffff;
+  --dangerous-normal-button-background-color: #E53343;
+  --dangerous-normal-button-border-color: #CD1222;
+  --dangerous-normal-button-shadow-color: #9E0E1A;
+  --dangerous-hover-button-background-color: #CD1222;
+  --dangerous-press-button-background-color: #9E0E1A;
+  --dangerous-press-button-border-color: #9E0E1A;
 
   /* Extension Pupup */
   --extension-popup-glow-color: #89C2DA;
@@ -69,6 +93,16 @@
   --extension-popup-switch-on-secondary-shadow-color: #4D7A8D33;
   --extension-popup-switch-on-text-color: #3B6A7D;
 
-  /* Others */
+  --extension-popup-dangerous-button-text-color: #ff2335;
+  --extension-popup-dangerous-button-background-color: #ff2335;
+
+  /* --- Other --- */
+
+  /* Fonts */
+  --editor-header-font-family: var(--code-font-family);
+  --editor-footer-font-family: var(--code-font-family);
+  --editor-buttons-font-family: var(--code-font-family);
+
+  /* Theme */
   --is-dark-theme: 1;
 }
