--- a/scripts/utilities/themes/night-owl.css
+++ b/scripts/utilities/themes/night-owl.css
@@ -59,6 +59,14 @@
   --general-press-button-background-color: #506377;
   --general-press-button-border-color: #506377;
 
+  --close-button-text-color: #ffffff;
+  --close-normal-button-background-color: #122438;
+  --close-normal-button-border-color: #314458;
+  --close-normal-button-shadow-color: #506377;
+  --close-hover-button-background-color: #314458;
+  --close-press-button-background-color: #506377;
+  --close-press-button-border-color: #506377;
+
   --save-arguments-button-text-color: #ffffff;
   --save-arguments-normal-button-background-color: #05131F;
   --save-arguments-normal-button-border-color: #314458;
