--- a/scripts/functions-editor/settings-styles/font-feature-settings.css
+++ b/scripts/functions-editor/settings-styles/font-feature-settings.css
@@ -28,6 +28,7 @@
 .CodeMirror-line span,
 .CodeMirror-hint,
 .CodeMirror-Tern-tooltip.deluge-tooltip-example.CodeMirror-Tern-hint-doc *,
+.argTooltip.deluge-cm-script.argTooltip-anim,
 #outputToggleHook .dIB.mT5.vam,
 .pLR10.mB10.pR,
 #findBtn,
