--- a/scripts/utilities/themes/night-owl.css
+++ b/scripts/utilities/themes/night-owl.css
@@ -22,6 +22,7 @@
   --editor-header-shadow-color: #05131F;
   --editor-footer-background-color: #061626;
   --editor-footer-border-color: #192C40;
+  --editor-code-line-numbers-background-color: #061626;
 
   /* Editor */
   --cursor-color: #8AA6C3;
